--- a/.github/workflows/parser-test.yml
+++ b/.github/workflows/parser-test.yml
@@ -16,35 +16,20 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential xorg libxext-dev zlib1g-dev libbsd-dev
+        sudo apt-get install -y \
+          build-essential \
+          valgrind \
+          xorg \
+          libx11-dev \
+          libxext-dev \
+          libxrandr-dev \
+          libxrender-dev \
+          libxinerama-dev \
+          libxi-dev \
+          libxpm-dev \
+          libxcursor-dev \
+          zlib1g-dev \
+          libbsd-dev
 
-    - name: Unit tests
-      run: |
-        echo "Running unit tests..."
-        make test
-        echo "Unit tests completed"
-  
-    - name: Build cub3D
-      run: |
-        echo "Building cub3D..."
-        make
-        echo "Build completed"
-    
-    - name: List test maps
-      run: |
-        echo "Success test cases:"
-        ls -1 assets/maps/success/
-        echo ""
-        echo "Failure test cases:"
-        ls -1 assets/maps/failed/
-    
-    - name: Run parser tests
-      run: |
-        echo "Running parser test suite..."
-        bash ./test/run_parser_tests.sh
-    
-    - name: Test results
-      if: always()
-      run: |
-        echo "Test execution completed"
-        echo "Check the logs above for detailed results"
+    - name: Run test suite
+      run: make test
